objects/USA_Brand__c.object
<CustomObject>
    <description>USA BRIEFCASE object</description>
    <fields>
        <fullName>USA_Brand__c</fullName>
        <label>Brand</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Aberlour</fullName>
                </value>
                <value>
                    <fullName>Absolut</fullName>
                </value>
                <value>
                    <fullName>Avion</fullName>
                </value>
                <value>
                    <fullName>Beefeater</fullName>
                </value>
                <value>
                    <fullName>Brancott Estate</fullName>
                </value>
                <value>
                    <fullName>Brand Standards</fullName>
                </value>
                <value>
                    <fullName>Campo Viejo</fullName>
                </value>
                <value>
                    <fullName>Category Insights</fullName>
                </value>
                <value>
                    <fullName>Chivas</fullName>
                </value>
                <value>
                    <fullName>Dead Bolt</fullName>
                </value>
                <value>
                    <fullName>Del Maguey</fullName>
                </value>
                <value>
                    <fullName>G.H. Mumm</fullName>
                </value>
                <value>
                    <fullName>Graffigna</fullName>
                </value>
                <value>
                    <fullName>Green Spot</fullName>
                </value>
                <value>
                    <fullName>Hiram Walker</fullName>
                </value>
                <value>
                    <fullName>Jacob&apos;s Creek</fullName>
                </value>
                <value>
                    <fullName>Jameson</fullName>
                </value>
                <value>
                    <fullName>Kahlua</fullName>
                </value>
                <value>
                    <fullName>Kenwood</fullName>
                </value>
                <value>
                    <fullName>Lillet</fullName>
                </value>
                <value>
                    <fullName>Local Documents</fullName>
                </value>
                <value>
                    <fullName>Malibu</fullName>
                </value>
                <value>
                    <fullName>Martell</fullName>
                </value>
                <value>
                    <fullName>Midleton</fullName>
                </value>
                <value>
                    <fullName>Monkey 47</fullName>
                </value>
                <value>
                    <fullName>Mumm Napa</fullName>
                </value>
                <value>
                    <fullName>National Priority Calendar</fullName>
                </value>
                <value>
                    <fullName>Olmeca Altos</fullName>
                </value>
                <value>
                    <fullName>Pernod</fullName>
                </value>
                <value>
                    <fullName>Pernod Ricard Connect</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>USA_Business_Unit__c</fullName>
        <description>Select the appropriate business unit for this brand</description>
        <inlineHelpText>Select the appropriate business unit for this brand</inlineHelpText>
        <label>Business Unit</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Spirits</fullName>
                    <default>true</default>
                    <label>Spirits</label>
                </value>
                <value>
                    <fullName>Wines &amp; Champagnes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>USA_Description__c</fullName>
        <description>Enter a description for this brand/product</description>
        <inlineHelpText>Enter a description for this brand/product</inlineHelpText>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>USA_End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>USA_Filters__c</fullName>
        <label>Filters</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>USA_Highlight__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check if this is a highlighted brand/product</description>
        <inlineHelpText>Check if this is a highlighted brand/product</inlineHelpText>
        <label>Highlight</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>USA_Image_ID__c</fullName>
        <description>Image ID for the attached image</description>
        <inlineHelpText>Image ID for the attached image</inlineHelpText>
        <label>Image ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>USA_Product__c</fullName>
        <label>Product</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Aberlour 12 YO Double Cask</fullName>
                </value>
                <value>
                    <fullName>Aberlour 16 YO</fullName>
                </value>
                <value>
                    <fullName>Aberlour 18 YO</fullName>
                </value>
                <value>
                    <fullName>Aberlour A&apos;Bunadh</fullName>
                </value>
                <value>
                    <fullName>Aberlour Casg Annamh</fullName>
                </value>
                <value>
                    <fullName>Absolut 100</fullName>
                </value>
                <value>
                    <fullName>Absolut America</fullName>
                </value>
                <value>
                    <fullName>Absolut Apeach</fullName>
                </value>
                <value>
                    <fullName>Absolut Apple</fullName>
                </value>
                <value>
                    <fullName>Absolut Berri Acai</fullName>
                </value>
                <value>
                    <fullName>Absolut Cherrys</fullName>
                </value>
                <value>
                    <fullName>Absolut Chicago</fullName>
                </value>
                <value>
                    <fullName>Absolut Cilantro</fullName>
                </value>
                <value>
                    <fullName>Absolut Citron</fullName>
                </value>
                <value>
                    <fullName>Absolut Elyx</fullName>
                </value>
                <value>
                    <fullName>Absolut Family</fullName>
                </value>
                <value>
                    <fullName>Absolut Grape</fullName>
                </value>
                <value>
                    <fullName>Absolut Grapefruit</fullName>
                </value>
                <value>
                    <fullName>Absolut Hibiskus</fullName>
                </value>
                <value>
                    <fullName>Absolut Kurant</fullName>
                </value>
                <value>
                    <fullName>Absolut Mandrin</fullName>
                </value>
                <value>
                    <fullName>Absolut Mango</fullName>
                </value>
                <value>
                    <fullName>Absolut Mexico</fullName>
                </value>
                <value>
                    <fullName>Absolut Pears</fullName>
                </value>
                <value>
                    <fullName>Absolut Peppar</fullName>
                </value>
                <value>
                    <fullName>Absolut Raspberri</fullName>
                </value>
                <value>
                    <fullName>Absolut Ruby Red</fullName>
                </value>
                <value>
                    <fullName>Absolut Texas</fullName>
                </value>
                <value>
                    <fullName>Absolut Vanilia</fullName>
                </value>
                <value>
                    <fullName>Absolut Vodka</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>USA_Sort_Order__c</fullName>
        <label>Sort Order</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>USA_Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <label>USA Brand</label>
    <listViews>
        <fullName>PRUSA_All_Brands</fullName>
        <columns>NAME</columns>
        <columns>USA_Product__c</columns>
        <columns>USA_Description__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>USA_Product__c</field>
            <operation>equals</operation>
        </filters>
        <label>PRUSA All Brands</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>PRUSA_Spirits_Brands_Products</fullName>
        <columns>NAME</columns>
        <columns>USA_Product__c</columns>
        <filterScope>Everything</filterScope>
        <label>PRUSA Spirits Brands and Products</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>USA Brand Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>USA Brands</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>